objects/User.object
<CustomObject>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_AllSalesArea__c</fullName>
        <description>Created to concatenate all Sales User multi picklist values</description>
        <encryptionScheme>None</encryptionScheme>
        <label>All Sales Area</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_KAM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PrimaryBusinessType__c</fullName>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PMC_CPQ_SalesRegion__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_QuoteBusinessType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPExternalUserId__c</fullName>
        <description>This field stores the user reference that will be used for Integration purposes with SAP.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SAP External User Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SalesArea__c</fullName>
        <description>The Sales Areas associated with the user from which the record type and product will be configured.</description>
        <label>Sales Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_SalesAreaUser</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SalesOffice__c</fullName>
        <label>Sales Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_SalesOfficeCodes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SalesRegion__c</fullName>
        <label>Sales Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SecondaryBusinessType__c</fullName>
        <label>Secondary Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_QuoteBusinessType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_BackupUser__c</fullName>
        <label>Backup User</label>
        <relationshipName>CaseOwner2</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>PMC_SS_DelegateUser__c</fullName>
        <description>This field is used to delegate the work to the user.</description>
        <label>Delegate User</label>
        <relationshipName>OOOUsers</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>PMC_SS_OutOfOfficeEndDate__c</fullName>
        <description>This field is for the user to enter the end date of his out of office.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Once you reassign these cases, you cannot reassign them back</inlineHelpText>
        <label>Out of office end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_OutOfOfficeStartDate__c</fullName>
        <description>This field is for the user to enter the start date of his out of office.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Once you reassign these cases, you cannot reassign them back</inlineHelpText>
        <label>Out of office start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_OutOfOffice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out Of Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Profile_Name__c</fullName>
        <formula>Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_RegionalDirector__c</fullName>
        <description>Field used to store the Regional Director of the user</description>
        <label>Regional Director</label>
        <relationshipName>Regional_Directors</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>PMC_SS_RegionalManager__c</fullName>
        <description>Field used to store the Regional Manager of the user</description>
        <label>Regional Manager</label>
        <relationshipName>Regional_Managers</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SegmentManager__c</fullName>
        <description>Field used to store the Segment Manager of the user</description>
        <label>Segment Manager</label>
        <relationshipName>Segment_Managers</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SeniorDirectors__c</fullName>
        <description>Field used to store the Senior Directors of the user</description>
        <label>Senior Director</label>
        <relationshipName>Senior_Directors</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultProductLookupTab__c</fullName>
        <description>Default tab for this user in Product Lookup page.</description>
        <inlineHelpText>Customize default tab in Product Lookup page.</inlineHelpText>
        <label>Default Product Lookup Tab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guided Selling</fullName>
                    <default>true</default>
                    <label>Guided Selling</label>
                </value>
                <value>
                    <fullName>Search Filters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DiagnosticToolEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable to run pricing diagnostics during a Quote Line Editor Calculate.</description>
        <inlineHelpText>Use to enable CPQ Diagnostic Tool, only available if org setting is enabled. Contact support to enable this capability.</inlineHelpText>
        <label>Enable Diagnostic Tool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OutputFormatChangeAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this user is allowed to change output format of quote documents.</description>
        <inlineHelpText>Check to allow this user to change output format of quote documents.</inlineHelpText>
        <label>Allow Output Format Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductSortPreference__c</fullName>
        <description>Product sort preference for this user. Currently only Chatter Follows are supported.</description>
        <inlineHelpText>Select &quot;Followed&quot; to display products you follow in Chatter before others when adding to quote.</inlineHelpText>
        <label>Product Sort Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Followed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ResetProductLookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether Product Lookup data (guided selling questions, search filters and search results) are cleared after user selects desired products.</description>
        <inlineHelpText>Check to clear search filters and results every time you add products to your quotes. Otherwise, your previous selections are kept.</inlineHelpText>
        <label>Reset Product Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Theme__c</fullName>
        <description>Field that will be set by Select Theme custom link, once one is selected.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Theme</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__API_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_290</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Hide_Copado_feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The visibility of the message asking users to rate &amp; feedback Copado on the AppExchange is controlled here.</inlineHelpText>
        <label>Hide Copado feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Show_Copado_Tips__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Copado Tips</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Work_Manager_Panels__c</fullName>
        <description>JSON containing current user panels on the Backlog</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Work Manager Panels</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__CanManageAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Can Manage DocuSign Account</description>
        <label>Can Manage DocuSign Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__Provisioned__c</fullName>
        <description>Date when the user was added to the account</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date provisioned</inlineHelpText>
        <label>DocuSign Provisioned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dfsle__Status__c</fullName>
        <label>Docusign Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dfsle__Username__c</fullName>
        <description>DocuSign Username</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DocuSign Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_ET_Page__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Default Marketing Cloud Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_MID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Default MID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetUsername__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Marketing Cloud Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTarget_OAuth_Token__c</fullName>
        <label>@deprecated</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud User</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Administrative_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Administrative Users</label>
    </listViews>
    <listViews>
        <fullName>All_Functional_Users_Brazil</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>PMC_CPQ_SalesRegion__c</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_CPQ_SalesRegion__c</field>
            <operation>equals</operation>
            <value>Brazil</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Functional Users - Brazil</label>
    </listViews>
    <listViews>
        <fullName>All_Functional_Users_North_America</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>PMC_CPQ_SalesRegion__c</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PMC_CPQ_SalesRegion__c</field>
            <operation>equals</operation>
            <value>North America</value>
        </filters>
        <label>All Functional Users - North America</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>PMC_CheckBackUpUserIsOnOOO</fullName>
        <active>true</active>
        <errorConditionFormula>PMC_SS_BackupUser__r.PMC_SS_OutOfOffice__c = true</errorConditionFormula>
        <errorMessage>Selected Back up user is on out of office. Please select a different user.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_SS_BackupUser</fullName>
        <active>true</active>
        <errorConditionFormula>IF(PMC_SS_OutOfOffice__c  = true, 
ISBLANK(PMC_SS_BackupUser__c ) , 
ISNULL(PMC_SS_BackupUser__c ))</errorConditionFormula>
        <errorMessage>Back up user is mandatory for Out of office, please select the desired Back up user.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_SS_DelegatedUserOOORule</fullName>
        <active>true</active>
        <description>This validation rule checks if the delegated user is OOO and gives an error.</description>
        <errorConditionFormula>AND(
	NOT(CONTAINS($Profile.Name, &apos;Digital Hub&apos;)),
	NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
	NOT(ISBLANK(PMC_SS_DelegateUser__c)),
	NOT(ISBLANK(PMC_SS_DelegateUser__r.PMC_SS_OutOfOfficeEndDate__c)), 
	NOT(ISBLANK(PMC_SS_DelegateUser__r.PMC_SS_OutOfOfficeStartDate__c)),
	OR(
		ISCHANGED(PMC_SS_DelegateUser__c),
		ISCHANGED(PMC_SS_OutOfOfficeStartDate__c),
		ISCHANGED(PMC_SS_OutOfOfficeEndDate__c)
	),
	NOT(ISBLANK(PMC_SS_OutOfOfficeEndDate__c)), 
	NOT(ISBLANK(PMC_SS_OutOfOfficeStartDate__c)),
	OR(
		AND(
			PMC_SS_OutOfOfficeStartDate__c &gt;= PMC_SS_DelegateUser__r.PMC_SS_OutOfOfficeStartDate__c, PMC_SS_OutOfOfficeEndDate__c &lt;= PMC_SS_DelegateUser__r.PMC_SS_OutOfOfficeEndDate__c
		)
	),
	NOT(ISNEW())
)</errorConditionFormula>
        <errorDisplayField>PMC_SS_DelegateUser__c</errorDisplayField>
        <errorMessage>The user you selected is already Out Of Office. Please select another user to delegate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_SS_EnterDatesForOutOfOffice</fullName>
        <active>true</active>
        <description>This validation rule checks if the start and end dates are not blank</description>
        <errorConditionFormula>AND(NOT(CONTAINS($Profile.Name, &apos;Digital Hub&apos;)),
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),NOT(ISBLANK(PMC_SS_DelegateUser__c)), OR(ISBLANK(PMC_SS_OutOfOfficeStartDate__c),  ISBLANK(PMC_SS_OutOfOfficeEndDate__c)),
NOT(ISNEW()))</errorConditionFormula>
        <errorDisplayField>PMC_SS_OutOfOfficeStartDate__c</errorDisplayField>
        <errorMessage>Please enter Out Off Office start date and end date when entering delegated user</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_SS_EnterDelegateUser</fullName>
        <active>true</active>
        <description>This validation rule checks if Delegate user is not blank</description>
        <errorConditionFormula>AND(NOT(CONTAINS($Profile.Name, &apos;Digital Hub&apos;)),
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c), ISBLANK(PMC_SS_DelegateUser__c), OR(NOT(ISBLANK(PMC_SS_OutOfOfficeStartDate__c)), NOT(ISBLANK(PMC_SS_OutOfOfficeEndDate__c))),
NOT(ISNEW())
)</errorConditionFormula>
        <errorDisplayField>PMC_SS_DelegateUser__c</errorDisplayField>
        <errorMessage>Please enter the Delegate User while entering Out Of Office start date and end date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_SS_MandatoryUserFields</fullName>
        <active>false</active>
        <description>This validation rule is used to ensure that Federation ID and Mobile No. fields are filled while creating/updating user records.</description>
        <errorConditionFormula>AND(
NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c ),

NOT( OR( BEGINS(Profile.Name, &apos;Digital Hub&apos;),(Profile.Name == &apos;API Only profile&apos;), (Profile.Name == &apos;Partner Community User&apos;)  ) ),
OR(
ISBLANK( FederationIdentifier ),
ISBLANK(  MobilePhone ),
ISBLANK(   TEXT(PMC_CPQ_SalesRegion__c)  )
)

)</errorConditionFormula>
        <errorDisplayField>EmailPreferences</errorDisplayField>
        <errorMessage>Please fill the mandatory fields, Mobile No., Federation ID &amp; Sales Region in order to save the record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_SS_OOOStartDateGreaterOrEqualToToday</fullName>
        <active>true</active>
        <description>This validation rule checks if the start date selected is not the past date</description>
        <errorConditionFormula>AND(
	NOT(CONTAINS($Profile.Name, &apos;Digital Hub&apos;)),
	NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
	PMC_SS_OutOfOfficeStartDate__c &lt; Today(),
	OR(
		ISCHANGED(PMC_SS_OutOfOfficeStartDate__c),
		ISCHANGED(PMC_SS_OutOfOfficeEndDate__c)
		),
	NOT(ISNEW())
)</errorConditionFormula>
        <errorDisplayField>PMC_SS_OutOfOfficeStartDate__c</errorDisplayField>
        <errorMessage>Previous date cannot be selected as a Out Of Office start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_SS_OOOStartDateIsGreaterThanEndDate</fullName>
        <active>true</active>
        <description>This validation rule throws an error message if the start date is greater than end date</description>
        <errorConditionFormula>AND(
	NOT(CONTAINS($Profile.Name, &apos;Digital Hub&apos;)),
	NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
	PMC_SS_OutOfOfficeEndDate__c &lt; PMC_SS_OutOfOfficeStartDate__c,
	OR(
		ISCHANGED(PMC_SS_OutOfOfficeStartDate__c),
		ISCHANGED(PMC_SS_OutOfOfficeEndDate__c)
		),
	NOT(ISNEW())

)</errorConditionFormula>
        <errorDisplayField>PMC_SS_OutOfOfficeStartDate__c</errorDisplayField>
        <errorMessage>Out Of Office Start Date cannot be after the Out of Office End Date</errorMessage>
    </validationRules>
</CustomObject>